--- a/src/main/resources/templates/relatorio.html
+++ b/src/main/resources/templates/relatorio.html
@@ -57,9 +57,9 @@
                     </a>
                 </li>
                 <li>
-                    <a th:href="@{/funcionario}">
+                    <a th:href="@{/perfis}">
                         <i class="now-ui-icons users_single-02"></i>
-                        <p>Usuários</p>
+                        <p>Perfis</p>
                     </a>
                 </li>
                 <li class="active">
