--- a/src/main/resources/templates/despesa.html
+++ b/src/main/resources/templates/despesa.html
@@ -59,9 +59,9 @@
             </a>
           </li>
           <li>
-            <a th:href="@{/funcionario}">
+            <a th:href="@{/perfis}">
               <i class="now-ui-icons users_single-02"></i>
-              <p>Usuários</p>
+              <p>Perfis</p>
             </a>
           </li>
           <li>
